# efficient-dl-systems

./: .gitignore  README.md
week02_fast_pipelines/homework/: requirements.txt
week02_fast_pipelines/homework/task1/: hw1.ipynb
week02_fast_pipelines/homework/task2/: hw2.ipynb  transformer.py
week02_fast_pipelines/seminar/: practice.ipynb
week03_data_parallel/homework/: bench_syncbn.py  hw.ipynb  sequential_print.py  syncbn.py  test_syncbn.py
week04_large_models/: benchmark.py  constants.py  create_model.py  download_model.py  homework.ipynb  offloading.py  practice_part1.ipynb  prefetching.py  pyproject.toml  run_model.py
week04_large_models/tests/: test_backward.py  test_big_batch.py  test_generate.py  test_offloaded_model.py  test_offloading.py
week05_fsdp/: README.md
week05_fsdp/homework/: README.md  fsdp.py  kek.py  pyproject.toml  report.ipynb  run.sh  test.py  train.py
